--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,37 @@ h1,h2,h3,h4,h5,h6,p{
   cursor: pointer;
   width: 261px;
 }
-
+.backdrop.is-hidden{
+  visibility: hidden;
+  pointer-events: none;
+}
+.backdrop{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+.modal{
+  width: 528px;
+  height: 581px;
+  background: #FFFFFF;
+}
+.close-button{
+  left: 1026px;
+  top: 229px;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
 /* ESTO ES FEATURE SECTION */
 
 .list-feature {
