--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
   --main-background-beige: #E5E5E5;
   --main-background-semi-light: #f4f4f4;
   --main-background-dark: #2F303A;
+  --cubic: cubic-bezier(0.4, 0, 0.2, 1);
  }
 
 /*ESTO SON ESTILOS GLOBALES PARA TODO EL CODIGO */
@@ -23,7 +24,11 @@ body{
   color: var(--main-color-dark);
 }
 h1,h2,h3,h4,h5,h6,p{
-  margin-top: 0px;
+  margin: 0;
+}
+img {
+  display: flex;
+  max-width: 100%;
 }
 *,*::before,*::after {
   box-sizing: border-box;
@@ -635,4 +640,30 @@ h1,h2,h3,h4,h5,h6,p{
   letter-spacing: 0.03em;
   line-height: 1.8;
   color: var(--main-color-grey);
+}
+.projects-link{
+  text-decoration: none;
+  color: currentColor;
+}
+.projects-thumb{
+  overflow: hidden;
+  position: relative;
+}
+
+.projects-overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: var(--brand-color);
+  padding: 63px 32px 63px 24px;
+  transform: translateY(100%);
+  transition: transform 250ms var(--cubic);
+}
+.text-transition{
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--main-background-semi-light);
+}
+.projects-section-list-item:hover .projects-overlay {
+  transform: translateY(0);
 }
