--- a/css/style.css
+++ b/css/style.css
@@ -220,31 +220,36 @@ img {
   pointer-events: none;
 }
 .backdrop{
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background: rgba(0, 0, 0, 0.2);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
 .modal{
+  top: calc((100% - 90px) / 8);
+  left: calc((100% - 528px) / 2);;
+  position: relative;
   width: 528px;
   height: 581px;
   background: #FFFFFF;
 }
 .close-button{
-  left: 1026px;
-  top: 229px;
+  position: absolute;
+  top: 8px;
+  right: 8px;
   border-radius: 50%;
   width: 30px;
   height: 30px;
   background: #FFFFFF;
   border: 1px solid rgba(0, 0, 0, 0.1);
+}
+.close-button-icon{
+  width: 11px;
+  height: 11px;
 }
 /* ESTO ES FEATURE SECTION */
 
@@ -322,13 +327,15 @@ img {
 .dedication-section-item {
   flex-basis: calc((100% - 50px) / 3);
 }
+.dedication-box{
+  position: relative;
+}
 .box-dedication-button {
     position: absolute;
-    top: 1557px;
-    width: 370px;
+    top: 251px;
+    width: 369px;
     height: 70px;
     background: rgba(47, 48, 58, 0.8);
-    bottom: 0;
 }    
 .text-dedication {
     font-weight: 700;
@@ -338,7 +345,7 @@ img {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--main-background-light);
-    padding: 27px 79px;
+    padding: 27px
 }
 /* ESTO ES TEAM SECTION */
 
