--- a/css/style.css
+++ b/css/style.css
@@ -678,7 +678,7 @@ img {
 }
 .text-transition{
   overflow: hidden;
-  background-color: var(--brand-color);
+  background: rgba(33, 150, 243, 0.9);
   position: absolute;
   width: 100%;
   height: 100%;
