--- a/css/style.css
+++ b/css/style.css
@@ -689,13 +689,15 @@ img {
   color: var(--main-background-semi-light);
   padding: 63px 24px 63px 24px;
 }
-.text-transition:hover{
-  overflow: visible;
-}
 .projects-thumb {
   position: relative;
 }
 .projects-thumb:hover .text-transition {
+  top: 0px;
+  overflow: visible;
+  transform: translateY(0);
+}
+.projects-link:focus .text-transition {
   top: 0px;
   overflow: visible;
   transform: translateY(0);
