--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,16 @@ img {
   padding-top: 32px;
   padding-bottom: 32px;
 }
+.span-header::after{
+  content: '';
+  position: relative;
+  top: 30px;
+  display: flex;
+  width: 100%;
+  height: 4px;
+  background-color: #2196F3;
+  border-radius: 2px;
+}
 .menu-list-portafolio{
   font-size: 14px;
   font-weight: 500;
@@ -217,6 +227,7 @@ img {
 }
 .backdrop.is-hidden{
   visibility: hidden;
+  opacity: 0;
   pointer-events: none;
 }
 .backdrop{
@@ -226,7 +237,9 @@ img {
   top: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: 4px;
 }
 .modal{
@@ -236,6 +249,7 @@ img {
   width: 528px;
   height: 581px;
   background: #FFFFFF;
+  
 }
 .close-button{
   position: absolute;
