--- a/css/style.css
+++ b/css/style.css
@@ -125,16 +125,20 @@ img {
   color: var(--brand-color);
   padding-top: 32px;
   padding-bottom: 32px;
+  transition: color 250ms var(--cubic);
 }
-.span-header::after{
-  content: '';
+.menu-list-studio.active {
+  color: var(--brand-color);
   position: relative;
-  top: 30px;
-  display: flex;
-  width: 100%;
-  height: 4px;
-  background-color: #2196F3;
-  border-radius: 2px;
+}
+.active::after{
+    position: absolute;
+    bottom: -1px;
+    content: "";
+    width: 100%;
+    height: 4px;
+    background: var(--brand-color);
+    border-radius: 2px;
 }
 .menu-list-portafolio{
   font-size: 14px;
@@ -149,6 +153,7 @@ img {
 }
 .menu-list-link:hover, .menu-list-link:focus, .menu-list-link:active{
   color: var(--brand-color);
+  transition: color 250ms var(--cubic);
 }
 .icon-envelope{
   margin-right: 6px;
@@ -174,15 +179,19 @@ img {
 }
 .contact-list-item:hover .contact-list-link{
   color: var(--brand-color);
+  transition: color 250ms var(--cubic);
 }
 .contact-list-item:hover .icon-envelope{
   fill: var(--brand-color);
+  transition: color 250ms var(--cubic);
 }
 .contact-list-link:focus{
   color: var(--brand-color);
+  transition: color 250ms var(--cubic);
 }
 .contact-list-link:focus .icon-envelope{
   fill: var(--brand-color);
+  transition: color 250ms var(--cubic);
 }
 .contact-list-item:not(:last-child){
   margin-right: 50px;
@@ -392,18 +401,23 @@ img {
 
 .team-soc-item:hover .team-soc-link{
   background-color: var(--brand-color);
+  transition: background-color 250ms var(--cubic);
 }
 .team-soc-item:hover .team-soc-icon{
   fill: var(--main-color-light);
+  transition: fill 250ms var(--cubic);
 }
 .team-soc-link .team-soc-icon:focus {
-    fill: var(--main-color-light)
+  fill: var(--main-color-light);
+  transition: fill 250ms var(--cubic);
 }
 .team-soc-link:focus{
  background-color: var(--brand-color);
+ transition: background-color 250ms var(--cubic);
 }
 .team-soc-link:focus .team-soc-icon{
   fill: var(--main-color-light);
+  transition: fill 250ms var(--cubic);
 }
 .team-soc-icon{
   height: 20px;
@@ -492,13 +506,18 @@ img {
 .clients-list-item:hover .clients-link{
   color: var(--brand-color);
   border-color: solid 1px var(--brand-color);
+  transition: color 250ms var(--cubic);
+  transition: border-color 250ms var(--cubic);
 }
 .clients-list-item:hover .clients-icon{
   fill: var(--brand-color);
+   transition: fill 250ms var(--cubic);
 }
 .clients-link:focus .clients-icon{
   background-color: var(--main-background-chill);
   fill: var(--brand-color);
+  transition: background-color 250ms var(--cubic);
+  transition: fill 250ms var(--cubic);
 }
 .clients-icon {
   width: 104px;
@@ -550,6 +569,7 @@ img {
 .contacts:hover,
 .contacts:focus {
   color: var(--brand-color);
+  transition: color 250ms var(--cubic);
 }
 .link.site {
   font-style: normal;
@@ -575,9 +595,11 @@ img {
 }
 .icon-footer:hover{
   background-color: var(--brand-color);
+  transition: background-color 250ms var(--cubic);
 }
 .icon-footer-encuentranos:focus .icon-footer{
   background-color: var(--brand-color);
+  transition: background-color 250ms var(--cubic);
 }
 .container-icon-footer {
   display: flex;
@@ -623,6 +645,8 @@ img {
   border-radius: 4px;
   color:  var(--main-color-light);
   cursor: pointer;
+  transition: background-color 250ms var(--cubic);
+  transition: color 250ms var(--cubic);
 }
 .menu-section-button-all{
   display: flex;
@@ -656,6 +680,7 @@ img {
 }
 .projects-section-list-item:hover{
   border: 1px solid var(--main-border-light);
+  transition: border 250ms var(--cubic);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .projects-section-title-text{
