--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,10 @@ img {
   padding-left: 0px;
   margin: 0px;
 }
+.link{
+  text-decoration: none;
+  color: currentColor;
+}
 .header{
   border-bottom: 1px solid #E5E5E5;
 }
@@ -272,9 +276,11 @@ img {
   border-radius: 4px;
 }
 .modal{
-  top: calc((100% - 90px) / 8);
-  left: calc((100% - 528px) / 2);;
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 528px;
   height: 581px;
   background: #FFFFFF;
@@ -293,6 +299,22 @@ img {
 .close-button-icon{
   width: 11px;
   height: 11px;
+}
+.close-button:hover{
+  background-color: var(--brand-color);
+  fill: var(--main-color-light);
+  transition-property: background-color  , transform;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+  transition-delay: 0;
+}
+.close-button:focus{
+  background-color: var(--brand-color);
+  fill: var(--main-color-light);
+  transition-property: background-color  , transform;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+  transition-delay: 0;
 }
 /* ESTO ES FEATURE SECTION */
 
@@ -374,21 +396,25 @@ img {
   position: relative;
 }
 .box-dedication-button {
-    position: absolute;
-    top: 251px;
-    width: 369px;
-    height: 70px;
-    background: rgba(47, 48, 58, 0.8);
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 369px;
+  height: 70px;
+  background: rgba(47, 48, 58, 0.8);
 }    
 .text-dedication {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.5;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--main-background-light);
-    padding: 27px
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--main-background-light);
+  padding: 27px
 }
 /* ESTO ES TEAM SECTION */
 
@@ -408,19 +434,19 @@ img {
   line-height: 1,1;
 }
 .team-soc-list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 17px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 17px;
 }
 .team-soc-link {
-    background-color: var(--main-background-light);
-    border-radius: 50%;
-    display: flex;
-    width: 40px;
-    height: 40px;
-    align-items: center;
-    justify-content: center;
+  background-color: var(--main-background-light);
+  border-radius: 50%;
+  display: flex;
+  width: 40px;
+  height: 40px;
+  align-items: center;
+  justify-content: center;
 }
 
 .team-soc-item:hover .team-soc-link{
@@ -439,7 +465,7 @@ img {
 }
 .team-soc-link .team-soc-icon:focus {
   fill: var(--main-color-light);
-    transition-property: fill, transform;
+  transition-property: fill, transform;
   transition-duration: 500ms;
   transition-timing-function: linear;
   transition-delay: 0;
@@ -767,11 +793,6 @@ img {
   line-height: 1.8;
   color: var(--main-color-grey);
 }
-.projects-link{
-  position: relative;
-  text-decoration: none;
-  color: currentColor;
-}
 .projects-thumb{
   overflow: hidden;
   position: relative;
@@ -790,18 +811,14 @@ img {
   line-height: 1.5;
   color: var(--main-background-semi-light);
   padding: 63px 24px 63px 24px;
-}
-.projects-thumb {
-  position: relative;
-}
-.projects-thumb:hover .text-transition {
-  top: 0px;
+  bottom: -1px;
   overflow: visible;
+}
+
+.projects-link:hover .text-transition {
   transform: translateY(0);
 }
 .projects-link:focus .text-transition {
-  top: 0px;
-  overflow: visible;
   transform: translateY(0);
 }
 
